		- Add spaces left and right of the "=" mark in the object browser overview
		- Set new default values: Check several fields, e.g. "block mode", "syntax highlighting", etc. by default
		- Define default values properly in each class instead of setting them globally
		- Use the TSparser and display comments nicely in the object browser

2007-04-27  Ingo Renner  <typo3@ingo-renner.com>

	* Removed partial t3lib_div in misc/phpcheck/incfile.php and included the real t3lib_div instead, PDT for Eclipse had problems determining the actual t3lib_div because of this

2007-04-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #1839: Broken Rootline when a Editor view a Page that is not online
	* Changed loop variable name in TCEMain because it could corrupt information passed to post-processing hook
	* Fixed workspace publishing error that may happen when "Element" versioning type is used

2007-04-19  Thomas Hempel  <thomas@work.de>
	
	* Implemented feature request #3894: Open module on startup

2007-04-18  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #3729: Roll-over (RO) on a GMENU in IE didn't work with xhtml_strict

2007-04-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed: t3lib_BEfunc::getRecord() did not free recordset. This can cause memory leaks if persistent mysql connections are used

2007-04-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Workspaces: added class.wslib_gui.php to allow using WS GUI from extensions
	* Fixed HTML syntax errors with some old html files

2007-04-05  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Renamed Typoscript condition julianday to dayofyear (see change from 2007-04-03)
	* Made debug logging of user-supplied SQL queries possible in t3lib_db.

2007-04-04  Andreas Otto  <andreas.otto@dkd.de>

	* Related to bug #4447: A directory handle was not correclty used.

2007-04-03  Andreas Otto  <andreas.otto@dkd.de>
